hphp/hack/test/typecheck/printf_crash.php.exp
File "printf_crash.php--printf.php", line 5, characters 10-19:
Invalid return type (Typing[4110])
File "printf_crash.php--printf.php", line 5, characters 10-19:
This is void because this function implicitly returns void
File "printf_crash.php--printf.php", line 5, characters 58-63:
It is incompatible with a string
